# lazy-split-sqr

./: LICENSE  README.md  lazy_split.db  project.toml  pyproject.toml
.github/workflows/: main.yaml
app/: database.py  main.py  models.py
app/api/: auth.py  dept.py  expenses.py  groups.py  users.py
app/tests/: test_fuzzing.py  test_mutation.py  test_request.py  test_unit.py  test_users.py
app/tests/request/: __init__.py  test_expenses.py  test_groups.py  test_users.py  users.py
front/: main.py
front/tests/: mocks.py  test_api.py  test_auth.py  test_expenses.py  test_group.py
